fix(keyspeakers): set max-width and word-wrap

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -527,6 +527,7 @@
   --speakers-padding:0 1rem 2rem 1rem;
   --speakers-picture-border-radius-mobile:50%;
   --speakers-picture-border-radius:50%;
+  --speakers-picture-img-max-width:var(--quote-picture-img-max-width);
   --text-decoration-hover:underline solid var(--color-orange) 1px;
   --text-decoration:underline solid var(--link-underline-color) 1px;
   --tickets-button-background-color-hover-primary:var(--button-background-color-hover-primary);
